<resources>
    <string name="app_name">Vertically Scrolling Comics</string>
    <string name="create">Create</string>
    <string name="browse">Browse</string>
    <string name="account">Account</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="account_login_string">Account Login</string>
    <string name="email_hint_string">Email</string>
    <string name="logged_in_as">Logged in as %1$s</string>
    <string name="password_hint_string">Password</string>
    <string name="register_new_account_string">Register new account</string>
    <string name="prompt_password">Password</string>
    <string name="login_string">Log In</string>
    <string name="register_string">Register</string>
    <string name="action_log_in">Log In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="continue_10_reading">Bookmarks</string>
    <string name="background">background</string>
    <string name="custom_comic_editor">Custom Comic Editor</string>
    <string name="save_and_exit">Save and Exit</string>
    <string name="sign_in_toast">Please Sign In</string>

    <!-- Toast Message Strings-->
    <string name="login_toast">Please enter email...</string>
    <string name="password_toast">Please enter password!</string>

    <!-- Strings related to the create page -->
    <string name="edit">Edit</string>
    <string name="publish">Publish</string>
    <string name="invalid_email">Please enter valid email...</string>
    <string name="need_permission_string">This app requires your permission in order to access photos</string>
    <string name="invalid_password">Password must contain 8 characters with one letter and one number!</string>
    <string name="register_success_string">Registration successful!</string>
    <string name="register_failed_string">Registration failed! Please try again later</string>
    <string name="logout">Logout</string>
    <string name="user_logged_in">User Logged In</string>
    <string name="coverart">coverArt</string>
    <string name="fab">fab</string>
    <string name="pick_image">Pick Image</string>
    <string name="background_color">Background Color</string>
    <string name="haptic_effects">Haptic Effects</string>
    <string name="scroll_speed">Scroll Speed</string>
    <string name="panel_spacing">Panel Spacing</string>
    <string name="preview_comic">Preview Comic</string>
    <string name="replace_with_title">Replace With Title</string>
    <string name="close">Close</string>
    <string name="comment_here">Comment Here</string>
    <string name="submit">Submit</string>
    <string name="title_author">Set Title &amp; Author</string>
    <string name="save">Save</string>
    <string name="metadata">Metadata</string>
    <string name="comments">Comments</string>
</resources>