<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonBrowse"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/browse" />

        <Button
            android:id="@+id/buttonContinueReading"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:autoSizeTextType="uniform"
            android:maxLines="2"
            android:text="@string/continue_10_reading" />

        <Button
            android:id="@+id/buttonCreate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/create" />

        <Button
            android:id="@+id/buttonAccount"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/account" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:name="com.umdproject.verticallyscrollingcomics.ui.main.AccountFragment"
        tools:layout="@layout/login_page" />

</androidx.constraintlayout.widget.ConstraintLayout>