<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/editorTitleText"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:includeFontPadding="false"
            android:maxLines="2"
            android:text="@string/replace_with_title"
            tools:ignore="TouchTargetSizeCheck"></TextView>

        <Button
            android:id="@+id/buttonSaveAndExit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:includeFontPadding="false"
            android:maxLines="2"
            android:text="@string/close"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"></Button>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/readCommentsList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        />


    <LinearLayout
        android:id="@+id/commentBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readCommentsList">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment_here"
            android:textColorHint="@color/white" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/dark_gray"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            tools:ignore="SpeakableTextPresentCheck" />
        <Button
            android:id="@+id/leaveComment"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:includeFontPadding="false"
            android:maxLines="2"
            android:text="@string/submit"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>