<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageview_cover_art"
            android:contentDescription="@string/coverart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            />

    </FrameLayout>

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:paddingRight="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        tools:text="tempTitle" />

    <TextView
        android:id="@+id/textview_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"


        tools:text="tempAuthor" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center">

        <Button
            android:id="@+id/buttonEdit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="195dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/edit" />

        <Button
            android:id="@+id/buttonPublish"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="195dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/publish"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>